--- a/public/index.html
+++ b/public/index.html
@@ -14,13 +14,8 @@
     <meta name="author" content="Minor Solis" />
     <title>AI</title>
     <link
-      href="%PUBLIC_URL%/vendor/fontawesome-free/css/all.min.css"
       rel="stylesheet"
-      type="text/css"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
 
     <link href="%PUBLIC_URL%/css/sb-admin-2.min.css" rel="stylesheet" />
@@ -32,9 +27,5 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script src="%PUBLIC_URL%/vendor/jquery/jquery.min.js"></script>
-    <script src="%PUBLIC_URL%/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="%PUBLIC_URL%/vendor/jquery-easing/jquery.easing.min.js"></script>
-    <script src="%PUBLIC_URL%/js/sb-admin-2.min.js"></script>
   </body>
 </html>
