--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
+    <script src="https://unpkg.com/brain.js@2.0.0-beta.5/dist/brain-browser.min.js"></script>
 
     <link href="%PUBLIC_URL%/css/sb-admin-2.min.css" rel="stylesheet" />
 
